<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_pfofile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_eds"
        android:orderInCategory="200"
        android:title="@string/action_eds"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_chat"
        android:orderInCategory="300"
        android:title="@string/action_chat"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="400"
        android:title="@string/action_exit"
        app:showAsAction="never" />

</menu>
