<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.AuthFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextEmail"
            android:layout_gravity="center_horizontal"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:ems="10" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPassword"
            android:layout_gravity="center_horizontal"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:ems="10" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_next_fragment"
            android:id="@+id/btn_sign_in"
            android:layout_gravity="center_horizontal" />



    </LinearLayout>

</FrameLayout>
